<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".SignUpActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="39dp">

    <TextView
        android:id="@+id/textViewSignUpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUpName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/textViewSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUpEmail"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/textViewSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUpPassword"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="321dp" />

    <EditText
        android:id="@+id/editTextSignUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSignUpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUpUsername"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUpButton"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="433dp" />

</androidx.constraintlayout.widget.ConstraintLayout>